K8s/resources/employee.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: employee
spec:
  selector:
    matchLabels:
      app: employee
  template:
    metadata:
      labels:
        app: employee
    spec:
      containers:
      - name: employee
        image: containersoga/employee:100.0.0
        # resources:
        #   limits:
        #     memory: "128Mi"
        #     cpu: "500m"
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: employee
spec:
  selector:
    app: employee
  ports:
  - port: 8082
    targetPort: 8080
    protocol: TCP
    name: http
