K8s/resources/organization.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: organization
spec:
  selector:
    matchLabels:
      app: organization
      version: v1
      type: backend
  template:
    metadata:
      labels:
        app: organization
        version: v1
        type: backend
    spec:
      containers:
      - name: organization
        image: containersoga/organization:100.0.0
        resources:
          limits:
            memory: "300Mi"
            cpu: "1500m"
        readinessProbe:
          httpGet:
            path: /actuator/health/readiness
            port: 8080
          initialDelaySeconds: 60
          periodSeconds: 10
          timeoutSeconds: 10
        livenessProbe:
          httpGet:
            path: /actuator/health/liveness
            port: 8080
          initialDelaySeconds: 60
          periodSeconds: 10
          timeoutSeconds: 10
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: organization
spec:
  selector:
    app: organization
  ports:
  - port: 8082
    targetPort: 8080
    protocol: TCP
    name: http
